# semantic-kg

./: .env.example  .gitignore  Makefile  README.md  hello.py  pyproject.toml  setup.cfg
config/datasets/: codex.yaml  findkg.yaml  globi.yaml  oregano.yaml  prime_kg.yaml
config/generation/: codex.yaml  findkg.yaml  globi.yaml  oregano.yaml  prime_kg.yaml
datasets/codex/: multisubgraph_dataset_small.csv
datasets/globi/: multisubgraph_dataset.csv
datasets/oregano/: ACTIVITY.tsv  DISEASES.tsv  EFFECT.tsv  INDICATION.tsv  PATHWAYS.tsv  PHENOTYPES.tsv  SIDE_EFFECT.tsv  gene_map.json  oregano_dataset.csv  pathway_map.json
scripts/: run_download_codex.sh  run_download_findkg.sh  run_download_globi.sh  run_download_oregano.sh  run_download_prime_kg.sh
semantic_kg/: generation.py  llm.py  perturbation.py  prime_kg.py  prompts.py  quality_control.py  sampling.py  utils.py
semantic_kg/datasets/: __init__.py  base.py  codex.py  findkg.py  globi.py  oregano.py  prime_kg.py
semantic_kg/models/: __init__.py  base.py  llm.py  prompts.py  reconstruction.py  utils.py
semantic_kg/prompts/: __init__.py  codex.py  default.py  findkg.py  globi.py  oregano.py  prime_kg.py  schema.py  scorer.py  utils.py
semantic_kg/quality_control/: graph_reconstruction.py  scorer.py  utils.py
tests/: test_graph_reconstruction.py  test_perturbation.py  test_quality_control.py  test_scorer.py  test_utils.py
