[project]
name = "semantic-kg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "hishel>=0.1.1",
    "ipython>=8.30.0",
    "matplotlib>=3.9.3",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "openai>=1.57.0",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "python-dotenv>=1.0.1",
    "rouge-score>=0.1.2",
    "ruff>=0.8.2",
    "scipy>=1.14.1",
    "tqdm>=4.67.1",
]
